--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/header.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/header.html
@@ -61,7 +61,7 @@
                                                                 transform="translate(-17.958 0)" />
                                                         </g>
                                                     </svg>
-                                                    <span class="sherah-header__count sherah-color1__bg">4</span>
+                                                    <span id="ntf-count" class="sherah-header__count sherah-color1__bg" style="display:none;">0</span>
                                                     <!-- sherah Alarm Hover -->
                                                     <div
                                                         class="sherah-dropdown-card sherah-dropdown-card__alarm sherah-border">
@@ -76,136 +76,9 @@
                                                         <h3 class="sherah-dropdown-card__title sherah-border-btm">Recent
                                                             Notification</h3>
                                                         <!-- sherah Balance List -->
-                                                        <ul class="sherah-dropdown-card_list">
-                                                            <li>
-                                                                <div class="sherah-paymentm__name">
-                                                                    <div
-                                                                        class="sherah-paymentm__icon sherah-paymentm__icon--notify ntfmax__bgc--5">
-                                                                        <svg xmlns="http://www.w3.org/2000/svg"
-                                                                            width="48" height="48" viewBox="0 0 48 48">
-                                                                            <g id="Icon"
-                                                                                transform="translate(14.293 11.5)">
-                                                                                <circle id="Ellipse_34"
-                                                                                    data-name="Ellipse 34" cx="24"
-                                                                                    cy="24" r="24"
-                                                                                    transform="translate(-14.293 -11.5)"
-                                                                                    fill="#6176fe"></circle>
-
-                                                                                <g id="Group_57" data-name="Group 57"
-                                                                                    transform="translate(5.343 7.675)">
-                                                                                    <g id="Group_56"
-                                                                                        data-name="Group 56">
-                                                                                        <path id="Path_189"
-                                                                                            data-name="Path 189"
-                                                                                            d="M153.613,143.984a.659.659,0,0,0-.932,0l-8.7,8.7a.659.659,0,1,0,.932.932l8.7-8.7A.659.659,0,0,0,153.613,143.984Z"
-                                                                                            transform="translate(-143.792 -143.792)"
-                                                                                            fill="#fff" stroke="#fff"
-                                                                                            stroke-width="0.2"></path>
-                                                                                    </g>
-                                                                                </g>
-                                                                            </g>
-                                                                        </svg>
-                                                                    </div>
-                                                                    <div class="sherah-paymentm__content">
-                                                                        <h4 class="sherah-notifications__title">You have
-                                                                            an offer! <span>successfully done</span>
-                                                                        </h4>
-                                                                        <p
-                                                                            class="sherah-paymentm__text sherah-paymentm__text--notify">
-                                                                            20 minutes ago</p>
-                                                                    </div>
-                                                                </div>
-                                                            </li>
-                                                            <li>
-                                                                <div class="sherah-paymentm__name">
-                                                                    <div
-                                                                        class="sherah-paymentm__icon sherah-paymentm__icon--notify ntfmax__bgc--2">
-                                                                        <svg xmlns="http://www.w3.org/2000/svg"
-                                                                            width="17.272" height="17.272"
-                                                                            viewBox="0 0 17.272 17.272">
-                                                                            <g id="jigsaw" transform="translate(0 0)">
-                                                                                <path id="Path_192" data-name="Path 192"
-                                                                                    d="M298.117,0h-5.612A.506.506,0,0,0,292,.506V2.832a.506.506,0,0,0,.843.377.691.691,0,1,1,0,1.03.506.506,0,0,0-.843.377v2.3a.506.506,0,0,0,.506.506h1.514a1.7,1.7,0,0,0,1.612,1.993h.067a1.7,1.7,0,0,0,1.7-1.7,1.711,1.711,0,0,0-.025-.292h1.54a.506.506,0,0,0,.506-.506V1.3a1.305,1.305,0,0,0-1.3-1.3Zm.292,6.41h-1.82a.506.506,0,0,0-.377.844.691.691,0,1,1-1.03,0,.506.506,0,0,0-.377-.844h-1.794V5.4a1.707,1.707,0,0,0,.292.025h0A1.7,1.7,0,0,0,295,3.659a1.7,1.7,0,0,0-1.993-1.612V1.012h5.106a.292.292,0,0,1,.292.292Z"
-                                                                                    transform="translate(-282.149)"
-                                                                                    fill="#fff"></path>
-                                                                                <path id="Path_193" data-name="Path 193"
-                                                                                    d="M13.325,108.41H11a.506.506,0,0,0-.377.844.691.691,0,1,1-1.03,0,.506.506,0,0,0-.377-.844H7.422V107.4a1.7,1.7,0,0,0,1.993-1.612,1.7,1.7,0,0,0-1.993-1.743v-1.54A.506.506,0,0,0,6.916,102H1.3A1.305,1.305,0,0,0,0,103.3v11.223a1.305,1.305,0,0,0,1.3,1.3H12.527a1.305,1.305,0,0,0,1.3-1.3v-5.612a.506.506,0,0,0-.506-.506ZM1.012,103.3a.292.292,0,0,1,.292-.292H6.41v1.82a.506.506,0,0,0,.844.377.691.691,0,1,1,0,1.03.506.506,0,0,0-.844.377v1.794H5.4a1.708,1.708,0,0,0,.025-.292,1.7,1.7,0,0,0-1.768-1.7,1.7,1.7,0,0,0-1.612,1.993H1.012Zm0,11.223v-5.106h1.82a.506.506,0,0,0,.377-.844.691.691,0,1,1,1.03,0,.506.506,0,0,0,.377.844H6.41v1.008a1.7,1.7,0,0,0-1.993,1.612,1.7,1.7,0,0,0,1.993,1.743v1.034H1.3a.292.292,0,0,1-.292-.292Zm11.807,0a.292.292,0,0,1-.292.292H7.422V113a.506.506,0,0,0-.844-.377.691.691,0,1,1,0-1.03.506.506,0,0,0,.844-.377v-1.794H8.429a1.7,1.7,0,0,0,1.612,1.993,1.7,1.7,0,0,0,1.743-1.993h1.034Z"
-                                                                                    transform="translate(0 -98.559)"
-                                                                                    fill="#fff"></path>
-                                                                            </g>
-                                                                        </svg>
-                                                                    </div>
-                                                                    <div class="sherah-paymentm__content">
-                                                                        <h4 class="sherah-notifications__title">You
-                                                                            upload your fast product <span>successfully
-                                                                                done</span></h4>
-                                                                        <p
-                                                                            class="sherah-paymentm__text sherah-paymentm__text--notify">
-                                                                            3 hours ago </p>
-                                                                    </div>
-                                                                </div>
-                                                            </li>
-                                                            <li>
-                                                                <div class="sherah-paymentm__name">
-                                                                    <div
-                                                                        class="sherah-paymentm__icon sherah-paymentm__icon--notify ntfmax__bgc--3">
-                                                                        <svg xmlns="http://www.w3.org/2000/svg"
-                                                                            width="17.723" height="15.196"
-                                                                            viewBox="0 0 17.723 15.196">
-                                                                            <path id="Path_194" data-name="Path 194"
-                                                                                d="M19.36,10.483A1.9,1.9,0,0,0,17.79,9.7h-.2V8.432a1.9,1.9,0,0,0-1.937-1.9h-4.1a.7.7,0,0,1-.424-.146L8.591,4.411A1.982,1.982,0,0,0,7.382,4H3.937A1.9,1.9,0,0,0,2,5.9V17.3a1.811,1.811,0,0,0,.291.988,1.95,1.95,0,0,0,1.646.912H15.967a1.9,1.9,0,0,0,1.861-1.336l1.811-5.7A1.9,1.9,0,0,0,19.36,10.483ZM3.266,5.9a.633.633,0,0,1,.671-.633H7.382a.709.709,0,0,1,.431.146l2.532,1.975a1.963,1.963,0,0,0,1.2.412h4.1a.633.633,0,0,1,.671.633V9.7H6.191a1.9,1.9,0,0,0-1.842,1.336L3.266,14.472Zm15.195,5.882-1.811,5.7a.633.633,0,0,1-.633.45H3.988a.7.7,0,0,1-.4-.127l2.026-6.388a.633.633,0,0,1,.633-.45H17.79a.684.684,0,0,1,.551.272.633.633,0,0,1,.12.544Z"
-                                                                                transform="translate(-2 -3.999)"
-                                                                                fill="#fff"></path>
-                                                                        </svg>
-                                                                    </div>
-                                                                    <div class="sherah-paymentm__content">
-                                                                        <h4 class="sherah-notifications__title">Your
-                                                                            Account has been created <span>successfully
-                                                                                done</span></h4>
-                                                                        <p
-                                                                            class="sherah-paymentm__text sherah-paymentm__text--notify">
-                                                                            5 hours ago</p>
-                                                                    </div>
-                                                                </div>
-                                                            </li>
-                                                            <li>
-                                                                <div class="sherah-paymentm__name">
-                                                                    <div
-                                                                        class="sherah-paymentm__icon sherah-paymentm__icon--notify ntfmax__bgc--4">
-                                                                        <svg xmlns="http://www.w3.org/2000/svg"
-                                                                            width="15.964" height="21.016"
-                                                                            viewBox="0 0 15.964 21.016">
-                                                                            <g id="Group_1033" data-name="Group 1033"
-                                                                                transform="translate(-1018.595 85.089)">
-                                                                                <path id="Path_1039"
-                                                                                    data-name="Path 1039"
-                                                                                    d="M1023.331-77.979a1.928,1.928,0,0,1,.928-3l-1.234-2.163c-.095-.166-.2-.328-.285-.5a.611.611,0,0,1,.406-.954,11.6,11.6,0,0,1,4.418-.438,20.431,20.431,0,0,1,2.3.391c.685.149.832.537.488,1.142-.473.829-.949,1.656-1.449,2.528a2.013,2.013,0,0,1,1.25,1.268,1.879,1.879,0,0,1-.324,1.706c.392.285.79.529,1.136.833a9.768,9.768,0,0,1,3.591,7.928,4.577,4.577,0,0,1-3.519,4.586,15.392,15.392,0,0,1-5.843.515,14.574,14.574,0,0,1-2.822-.455,4.688,4.688,0,0,1-3.768-5.139,9.783,9.783,0,0,1,4.536-8.1C1023.2-77.883,1023.267-77.932,1023.331-77.979Zm3.234,12.665c.164,0,.328,0,.492,0a11.2,11.2,0,0,0,4.02-.65,3.324,3.324,0,0,0,2.234-3.1,8.444,8.444,0,0,0-3.082-7.1,5.247,5.247,0,0,0-7.3,0,8.583,8.583,0,0,0-3.1,6.491,3.589,3.589,0,0,0,2.92,3.941A13.666,13.666,0,0,0,1026.565-65.314Zm2.4-18.255a9.991,9.991,0,0,0-4.753.014c.415.725.822,1.449,1.248,2.163a.4.4,0,0,0,.3.128c.545.011,1.09.013,1.635-.006a.477.477,0,0,0,.346-.174C1028.151-82.133,1028.544-82.835,1028.965-83.569Zm-2.365,3.418c-.643.122-1.274.219-1.893.367a.6.6,0,0,0-.508.787c.1.35.364.467.818.349a6.153,6.153,0,0,1,3.15,0c.426.111.689,0,.8-.33a.6.6,0,0,0-.479-.8C1027.865-79.925,1027.235-80.026,1026.6-80.151Z"
-                                                                                    transform="translate(0 0)"
-                                                                                    fill="#fff"></path>
-                                                                                <path id="Path_1040"
-                                                                                    data-name="Path 1040"
-                                                                                    d="M1096.76,34.223a1.755,1.755,0,0,1-.952,1.551.447.447,0,0,0-.275.479,1.943,1.943,0,0,1-.022.489.557.557,0,0,1-.612.487.566.566,0,0,1-.574-.488,2.765,2.765,0,0,0-.75-1.247,3.03,3.03,0,0,1-.351-.343.613.613,0,1,1,.882-.852c.091.082.17.18.266.255.264.207.582.339.86.112a.853.853,0,0,0,.261-.622c-.02-.382-.347-.466-.684-.505a1.822,1.822,0,0,1-1.7-2.162,1.668,1.668,0,0,1,.89-1.258.488.488,0,0,0,.307-.545,1.588,1.588,0,0,1,.022-.448.553.553,0,0,1,.575-.484.568.568,0,0,1,.612.491,2.189,2.189,0,0,0,.753,1.243c.4.329.47.676.212.985-.24.287-.579.272-.978-.012a1.245,1.245,0,0,0-.51-.232.542.542,0,0,0-.66.463.578.578,0,0,0,.452.712,3.246,3.246,0,0,0,.365.05A1.843,1.843,0,0,1,1096.76,34.223Z"
-                                                                                    transform="translate(-68.335 -104.403)"
-                                                                                    fill="#fff"></path>
-                                                                            </g>
-                                                                        </svg>
-                                                                    </div>
-                                                                    <div class="sherah-paymentm__content">
-                                                                        <h4 class="sherah-notifications__title">Thank
-                                                                            you !you made your fast sell
-                                                                            <span>$120</span>
-                                                                        </h4>
-                                                                        <p
-                                                                            class="sherah-paymentm__text sherah-paymentm__text--notify">
-                                                                            6 hours ago</p>
-                                                                    </div>
-                                                                </div>
-                                                            </li>
-                                                        </ul>
+                                                       <ul id="ntf-list" class="sherah-dropdown-card_list"></ul>
                                                         <!-- sherah Balance Button -->
-                                                        <div class="sherah-dropdown-card__button"><a
-                                                                class='sherah-dropdown-card__sell-all'
-                                                                href='notifications.html'>See all Notification</a></div>
+                                                        
                                                     </div>
                                                     <!-- End sherah Balance Hover -->
                                                 </div>
@@ -350,7 +223,6 @@
         <!-- End Dashboard Inner -->
 
         <!-- End sherah Dashboard -->
-
 
 
     
