--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/order-details.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/order-details.html
@@ -142,6 +142,7 @@
   <script src="js/jvector-map.js"></script>
   <script src="js/main.js"></script>
   <script src="js/auth-header.js"></script>
+    <script src="js/provider-notifications.js"></script>
 
   <script>
     async function loadLayout() {
@@ -153,6 +154,7 @@
 
       initSherahLayout();
       if (window.loadAuthToHeader) window.loadAuthToHeader();
+      if (window.initProviderNotifications) window.initProviderNotifications();
     }
   </script>
 
