--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/profile-info.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/profile-info.html
@@ -361,6 +361,7 @@
 	<script src="js/jvector-map.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/auth-header.js"></script>
+	<script src="js/provider-notifications.js"></script>
 	<script>
 		async function loadLayout() {
 			const headerRes = await fetch("header.html");
@@ -373,6 +374,7 @@
 
 			// ✅ quan trọng: gọi sau khi header đã có trong DOM
 			if (window.loadAuthToHeader) window.loadAuthToHeader();
+			if (window.initProviderNotifications) window.initProviderNotifications();
 		}
 	</script>
 	<script>
